online/apigw/tencent-apigw-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: tencent-apigw-svc
  namespace: ysw-server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
kind: Endpoints
apiVersion: v1
metadata:
  name: tencent-apigw-svc
  namespace: ysw-server
subsets:
  - addresses:
      - ip: 10.6.16.37
    ports:
      - port: 80
